<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EduSchedule</string>
    <string name="groups">Groups</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="no_lesson">(No Lesson)</string>
    <string name="teachers">Teachers</string>
    <string name="my_schedule">My schedule</string>
    <string name="my_schedule_loaded">&#x2605; %s</string>
    <string name="change_group">Change schedule</string>
    <string name="group_selector_title">Choose your group</string>
    <string name="list_empty_placeholder">No items here</string>
    <string name="no_lessons">There are no lessons on this day</string>
    <string name="no_groups">No groups found</string>
    <string name="no_teachers">No teachers found</string>
    <string name="no_schools">No schools found</string>
    <string name="select_group">Select your group</string>
    <string name="change_school">Change educational institution</string>
    <string name="select_school">Select your school</string>
    <string name="nav_school">School</string>
    <string name="nav_license">Icon made by Icon Pond</string>
    <string name="license">Icons made by Icon Pond www.flaticon.com is licensed by Creative Commons BY 3.0</string>
    <string name="no_internet">No internet connection</string>
    <string name="timeout">Too long server response time</string>
    <string name="unknown_error">Ops, something went wrong</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>
    <string name="cached_version_used">Cannot access to education institution site, use the latest cached version (%s)</string>
    <string name="action_search">Search…</string>
    <string name="use_cache">Use cached schedule</string>
    <string name="auto_use_cache_summary">Auto use cached schedule when education institution site does not responds</string>
    <string name="settings">Settings</string>
    <string name="auto_use_cache_title">Auto use cache</string>
    <string name="schedule_changed_title">Schedule changed</string>
    <string name="schedule_changed_message">Schedule changed, tap to open new version</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Send notifications about schedule changes</string>
    <string name="refresh">Refresh</string>
    <string name="back_mode_message">Click one more time to exit</string>
    <string name="type_chooser_title">I am a…</string>
    <string name="type_teacher">Teacher</string>
    <string name="type_student">Student</string>
    <string name="next">Next</string>
    <string name="select_teacher">Select teacher</string>
    <string name="schedule_type_title">My Schedule Type</string>
    <string name="my_schedule_dialog_title">I am a…</string>
    <string name="choose_type_hint">You can always change type in Settings</string>
    <string name="update_title">Update needed</string>
    <string name="update_message">You are using old app version. It may cause unexcepted problems. Please update it</string>
    <string name="update_action">Update</string>
    <string name="update_continue">Later</string>
    <string name="info">About</string>
    <string name="app_info">
        An application that allows you to view the schedule of educational institutions connected to the NikaSoft system.\n\n

        Capabilities:\n
            * Group schedules\n
            * Teacher schedule\n
            * Select a group for quick access\n
            * View the schedule without the Internet\n
            * Highlighting current lesson\n
            * Notification of schedule change\n\n


        Developers:\n
            * Sergeev Valentin\n
            * Sabalevskii Sergey\n\n


        Icons made by Icon Pond www.flaticon.com is licensed by Creative Commons BY 3.0
    </string>
    <string name="help_info" translatable="false">Yandex.Money: %s</string>

    <string name="help_devs">Support developers</string>
    <string name="wallet_copied">Wallet copied to clipboard</string>
</resources>
