<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="auto_use_cache"
        android:summary="@string/auto_use_cache_summary"
        android:title="@string/auto_use_cache_title"/>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="notifications"
        android:title="@string/notifications_title"
        android:summary="@string/notifications_summary" />
    <ListPreference
        android:key="schedule_type"
        android:title="@string/schedule_type_title"
        android:dialogTitle="@string/my_schedule_dialog_title"
        android:entries="@array/schedule_type_entries"
        android:entryValues="@array/schedule_type_values" />
</PreferenceScreen>