<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_main_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_item_my_schedule"
            android:icon="@drawable/ic_star"
            android:title="@string/my_schedule" />

        <item
            android:id="@+id/nav_item_groups"
            android:icon="@drawable/ic_group"
            android:title="@string/groups" />
        <item
            android:id="@+id/nav_item_teachers"
            android:icon="@drawable/ic_teacher"
            android:title="@string/teachers" />
    </group>

    <group android:id="@+id/nav_bottom_group">

        <item
            android:id="@+id/nav_item_change_school"
            android:icon="@drawable/ic_exit"
            android:title="@string/change_school" />
    </group>

    <item
        android:id="@+id/nav_logo_info"
        android:enabled="false"
        android:title="@string/nav_license" />
</menu>