<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.valentun.eduschedule.Constants" />
    </data>

    <ScrollView

        android:id="@+id/info_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/app_info" />

            <CheckedTextView
                android:id="@+id/info_expander"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?attr/selectableItemBackground"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:drawableRight="@drawable/ic_arrow_down"
                android:padding="8dp"
                android:text="@string/help_devs"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expandable_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="400"
                app:el_expanded="false"
                app:el_parallax="1">

                <TextView
                    android:id="@+id/help_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_copy"
                    android:drawableRight="@drawable/ic_copy"
                    android:padding="16dp"
                    android:gravity="center_vertical"
                    android:text="@{@string/help_info(Constants.WALLET_VALUE)}"
                    android:textIsSelectable="true" />

            </net.cachapa.expandablelayout.ExpandableLayout>
        </LinearLayout>
    </ScrollView>
</layout>